--- a/task/src/components/Header/Header.scss
+++ b/task/src/components/Header/Header.scss
@@ -96,7 +96,7 @@
             padding: 15px 0;
             line-height: 20px;
           }
-          button {
+          a {
             margin: 0 auto;
           }
         }
